--- a/style.css
+++ b/style.css
@@ -1,8 +1,15 @@
 body{
+    margin: 0;
     font-family: 'Poppins', sans-serif;
 }
 h1{
     font-size: 50px;
+}
+h2{
+    font-size: 30px;
+}
+p{
+    color: lime;
 }
 .name-highlight{
     color: blueviolet;
@@ -15,4 +22,56 @@ h1{
 }
 .half-width{
     width: 100%;
+}
+.top-banner{
+    border:1px solid crimson;
+    background-image: url("images/top-banner.png");
+    background-repeat: no-repeat;
+}
+section{
+    height: 500px; 
+    padding-bottom: 150px;   
+}
+.link-button{
+    text-decoration: none;
+    background-image: linear-gradient(deg45,lightsalmon, tomato);
+    background-color: darkred;
+    padding: 10px 20px;
+    border-radius: 10px;
+    color: white;
+    font-weight: 700;
+}
+.dream-area{
+    border: 1px saddlebrown;
+    background-image: url("images/dream-bg.png");
+    background-repeat: no-repeat;
+    background-position: right;
+}
+.orange-highlight{
+    color: navy;
+}
+.single-experience{
+    box-shadow:  10px 10px 30px grey;
+    border-radius: 5px;
+    height: 80%;
+    background-color: cornsilk;
+}
+.experience-area{
+    background-image:url("images/exp-bg.png");
+    background-repeat: no-repeat;
+    background-position: right;
+}
+#full-stack{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, red, rgba(128, 143, 138, 0.637));
+    border-image-slice: 1;
+}
+#baby-web{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, rgba(0, 26, 255, 0.664), rgba(128, 143, 138, 0.637));
+    border-image-slice: 1;
+}
+footer p{
+    text-align: center;
+    font-size: medium;
 }
